[project]
name = "shortr"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docker*", "tests*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
