[project]
name = "shortr"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "redis>=5.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docker*", "tests*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/services/redirect_service.py",   # legacy stub, superseded by redirects.py
    "app/db/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false